# MuQt

./: .gitignore  CMakeLists.txt  README.md  app.rc  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  navigationpanel.cpp  navigationpanel.h  pagecachemanager.h  pdfdocumenttab.cpp  pdfpagewidget.cpp  pdfpagewidget.h  resources.qrc  styles.qrc  textcachemanager.cpp  textcachemanager.h
controller/: pdfdocumentsession.cpp  pdfdocumentsession.h
core/: mupdfrenderer.cpp  mupdfrenderer.h  mupdfrendererutil.h  papereffectenhancer.cpp  papereffectenhancer.h  perthreadmupdfrenderer.cpp  perthreadmupdfrenderer.h  threadsaferenderer.cpp  threadsaferenderer.h
handler/: pdfcontenthandler.cpp  pdfcontenthandler.h  pdfinteractionhandler.cpp  pdfinteractionhandler.h  pdfviewhandler.cpp  pdfviewhandler.h
manager/: linkmanager.cpp  linkmanager.h  ocrmanager.cpp  ocrmanager.h  outlinemanager.cpp  outlinemanager.h  pagecachemanager.cpp  searchmanager.cpp  searchmanager.h  textcachemanager.cpp  textcachemanager.h  thumbnailbatchtask.cpp  thumbnailbatchtask.h  thumbnailmanager.cpp  thumbnailmanager.h  thumbnailmanagerv2.cpp  thumbnailmanagerv2.h
model/: outlineitem.cpp  outlineitem.h  thumbnailloadstrategy.cpp  thumbnailloadstrategy.h
ocr/: chinesetokenizer.cpp  chinesetokenizer.h  ocrengine.cpp  ocrengine.h
ocr/rapidocr-cpp/: calrecboxes.cpp  calrecboxes.h  infersession.cpp  infersession.h  loadimage.cpp  loadimage.h  ocroutput.cpp  ocroutput.h  ortinfersession.cpp  ortinfersession.h  processimage.cpp  processimage.h  rapidocr.cpp  rapidocr.h  sessionconfig.cpp  sessionconfig.h  textclassifier.cpp  textclassifier.h  textdetector.cpp  textdetector.h  textrecognizer.cpp  textrecognizer.h  utils.cpp  utils.h
resources/styles/: main.qss  navigation.qss  outline.qss
resources/styles/components/: button.qss  common.qss  mainwindow.qss  menu.qss  navigationpanel.qss  pdfpagewidget.qss  scrollbar.qss  searchwidget.qss  statusbar.qss  toolbar.qss
resources/styles/themes/: light.qss
session/: pdfdocumentsession.cpp  pdfdocumentsession.h  pdfdocumentstate.cpp  pdfdocumentstate.h
tool/: outlineeditor.cpp  outlineeditor.h  textselector.cpp  textselector.h
ui/: mainwindow.cpp  mainwindow.h  navigationpanel.cpp  navigationpanel.h  outlinedialog.cpp  outlinedialog.h  outlinewidget.cpp  outlinewidget.h  pdfdocumenttab.cpp  pdfdocumenttab.h  pdfpagewidget.cpp  pdfpagewidget.h  searchwidget.cpp  searchwidget.h  thumbnailwidget.cpp  thumbnailwidget.h
ui/theme/: stylemanager.cpp  stylemanager.h
util/: appconfig.cpp  appconfig.h  datastructure.h
